LIST OF CHANGES

 - Fixed perlbrew installation by installing libdevel-patchperl-perl in
   GitHub runner.

release 102.0.0 (2024-11-28)
 - Removed 'bin/npg_deletable_dr_runs' since dr storage is decommissioned

release 101.6.0 (2024-10-24)
 - Added sample_uuid and sample_lims methods to st::api::lims
 - Patched st::api::lims::samplesheet to allow for scalar attributes
   ending with 's'. Previously the values of attributes with names
   ending with 's' were automatically converted to lists. In fact,
   this was necessary only for comma-separated strings of email addresses.
   The part of code that deals with email addresses was changed to
   work on attributes with names starting with 'email' rather than
   ending with 's'. Prior to applying this patch the value of the
   new 'sample_lims' attribute was returned as a list when a samplesheet
   was used as a source of LIMS data.
 - Documented handling of multiple values in st::api::lims.
 - Added is_lane method and composition_object attribute to st::api::lims.

release 101.5.1 (2024-10-04)
 - Added .github/dependabot.yml file to auto-update GitHub actions
 - Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes,
   the checksum of the script served by https://install.perlbrew.pl had changed.
   https://install.perlbrew.pl is a redirect to raw
   https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so
   the change originates from GitHub and can be trusted. Our CI flow compares
   the checksum of the downloaded script to the expected value. We now store
   an updated expected checksum value, which corresponds to the latest release.
 - GitHub CI - updated deprecated v2 runner action to v3

release 101.5.0 (2024-09-04)
 - Moved the parser for the LIMS reference genome notation from
   npg_tracking::data::reference::find to a new package
   npg_tracking::data::reference::util, thus providing a stand-alone
   implementation of the parser.
